--- a/mobel/pubspec.yaml
+++ b/mobel/pubspec.yaml
@@ -61,6 +61,9 @@ flutter:
     - assets/img/icon1.jpg
     - assets/img/icon2.jpg
     - assets/img/icon3.jpg
+    - assets/img/merkurius.png
+    - assets/img/bulan.png
+    - assets/img/neptunus.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
